Fix short-form & change style for active tab in service creation form on mobile view.
– SAAS-335

--- a/assets/sass/blocks/short-form.scss
+++ b/assets/sass/blocks/short-form.scss
@@ -1,6 +1,12 @@
 .short-form {
     width: 60%;
     margin: 0 auto;
+    @include bp(xs) {
+        width: 98%;
+    } // xs
+    @include bp(sm) {
+        width: 98%;
+    } // sm
     &.full {
         width: 100%;
     } // &.full
